--- a/src/components/card/card-footer/button-to-cart/styles.module.scss
+++ b/src/components/card/card-footer/button-to-cart/styles.module.scss
@@ -23,6 +23,7 @@
 	border: none;
 	width: 100px;
 	max-height: 100%;
+	white-space: nowrap;
 
 	&.inCart {
 		background: $c-green;
