--- a/src/components/card/card-preview/styles.module.scss
+++ b/src/components/card/card-preview/styles.module.scss
@@ -11,4 +11,5 @@
   aspect-ratio: 1 / 1;
   object-fit: contain;
   margin-bottom: 12px;
+  cursor: pointer;
 }
