--- a/src/components/card/styles.module.scss
+++ b/src/components/card/styles.module.scss
@@ -13,7 +13,7 @@
   transition: $transition-all;
 
   &:hover {
-    box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
+    border: 1px solid rgba($c-black, 0.3);
   }
 }
 
